RESOLVED FIXED228086
[iOS] Tapping images on twitter.com should not toggle tab bar visibility
https://bugs.webkit.org/show_bug.cgi?id=228086
Summary [iOS] Tapping images on twitter.com should not toggle tab bar visibility
Wenson Hsieh
Reported 2021-07-19 13:34:58 PDT
Attachments
Patch (5.11 KB, patch)
2021-07-19 14:52 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-07-19 14:52:49 PDT
Geoffrey Garen
Comment 2 2021-07-19 15:07:34 PDT
Comment on attachment 433824 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=433824&action=review > Source/WebKit/ChangeLog:9 > + Treat taps over elements that are explicitly marked draggable and also respond to click events as "meaningful" Is the "and also respond to click events" detail in this patch, or in pre-existing code?
Wenson Hsieh
Comment 3 2021-07-19 15:09:16 PDT
Comment on attachment 433824 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=433824&action=review >> Source/WebKit/ChangeLog:9 >> + Treat taps over elements that are explicitly marked draggable and also respond to click events as "meaningful" > > Is the "and also respond to click events" detail in this patch, or in pre-existing code? Ah, so this is in pre-existing code (more specifically, the `clickNode` that's passed in is a `nodeRespondingToClickEvents`).
Geoffrey Garen
Comment 4 2021-07-19 15:09:56 PDT
Comment on attachment 433824 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=433824&action=review r=me >> Source/WebKit/ChangeLog:9 >> + Treat taps over elements that are explicitly marked draggable and also respond to click events as "meaningful" > > Is the "and also respond to click events" detail in this patch, or in pre-existing code? I see: The caller ensures nodeRespondingToClickEvents().
Wenson Hsieh
Comment 5 2021-07-19 16:43:15 PDT
Comment on attachment 433824 [details] Patch Thanks for the review!
EWS
Comment 6 2021-07-19 17:00:23 PDT
Committed r280057 (239792@main): <https://commits.webkit.org/239792@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433824 [details].
Note You need to log in before you can comment on or make changes to this bug.